fix connections list overflow

--- a/extension/src/browser/ConnectionsDrawer/style.module.css
+++ b/extension/src/browser/ConnectionsDrawer/style.module.css
@@ -33,6 +33,7 @@
 .drawerContent {
   padding: 50px;
   overflow: auto;
+  box-sizing: border-box;
   height: 100%;
   scrollbar-width: none;
 }
